Added game functions