@@ -5,6 +5,7 @@
 
 import javax.swing.*;
 import java.awt.*;
+import java.awt.event.MouseEvent;
 import java.util.ArrayList;
 import java.util.Scanner;
 
@@ -67,6 +68,7 @@ public class Level extends JComponent implements GameEventListener{
             }
             tubeList.add(tube);
         }
+        assignTubeShape();
     }
 
     // This is where all the drawing to the screen gets done.
@@ -83,6 +85,22 @@ public class Level extends JComponent implements GameEventListener{
         g.setFont(new Font(Font.DIALOG, Font.PLAIN, 14));
         g.drawString("Best Score:  "+ bestScore, 350, 55);
         g.drawString("Current Score:  "+ currentScore, 340, 72);
+        for (int i = 0; i < tubeList.size(); i++){
+            Rectangle temp = tubeList.get(i).getShape();
+            tubeList.get(i).assignBlockShape();
+            for (int j = 0; j < tubeList.get(i).getFillAmt(); j++){
+                Rectangle tempBlock = tubeList.get(i).getTube().get(j).getShape();
+                g.setColor(tubeList.get(i).getTube().get(j).getColor());
+                g.fillRect(tempBlock.x, tempBlock.y, tempBlock.width, tempBlock.height);
+            }
+            if (tubeList.get(i).isSelected()){
+                g.setColor(Color.RED);
+            } else {
+                g.setColor(Color.GRAY);
+            }
+            g.drawRect(temp.x, temp.y, temp.width, temp.height);
+        }
+
     }
 
     // GameEventListener method
@@ -93,12 +111,10 @@ public class Level extends JComponent implements GameEventListener{
     public void gameEventPerformed(GameEvent event) {
         switch(event.getEventType()){
             case EventType.LEVEL_RESTART:
-                //PLACEHOLDER CODE: Add code to restart the current level
-                System.out.println("(PLACEHOLDER CODE)Event Triggered: "+event);
+                restart();
                 break;
             case EventType.LEVEL_UNDO:
-                //PLACEHOLDER CODE: Add code to undo the last move
-                System.out.println("(PLACEHOLDER CODE)Event Triggered: "+event);
+                undo();
                 break;
             case EventType.LEVEL_HINT:
                 //PLACEHOLDER CODE: Add code to get a hint or the next move toward the solution
@@ -119,19 +135,28 @@ public class Level extends JComponent implements GameEventListener{
         return currentScore;
     }
 
-    public void moveBlock(Tube start, Tube end, boolean undo){
+    public void moveBlock(Tube start, Tube end){
+        if (start.isEmpty()){
+            return;
+        }
         int endSpace = end.getEmptySpace();
         Color startColor = start.viewTopBlock().getColor();
-        if (endSpace >= start.getTopColorSize()){ //if the empty space is sufficient
+        Block tempBlock = end.viewTopBlock();
+        Color endColor;
+        if (tempBlock == null){
+            endColor = startColor;
+        } else {
+            endColor = end.viewTopBlock().getColor();
+        }
+        if (endSpace >= start.getTopColorSize() && (startColor.equals(endColor))){ //if the empty space is sufficient
             int top = start.getFillAmt() - 1;
-            while (start.viewTopBlock().getColor().equals(startColor) && top >= 0){
+            while (start.viewTopBlock() != null && start.viewTopBlock().getColor().equals(startColor) && top >= 0){
                 Block temp = start.removeTopBlock(); //moves block over
                 end.addBlock(temp);
                 top -= 1;
-            }
-            if (!undo){
                 moveList.add(start); // keep track of which tubes have been moved
                 moveList.add(end);
+
             }
             currentScore += 1;
         } else {
@@ -141,12 +166,17 @@ public class Level extends JComponent implements GameEventListener{
 
     public void undo(){
         if (!moveList.isEmpty()) {
-            Tube start = moveList.get(moveList.size() - 1); //get last item (which is the end of the last move
-            Tube end = moveList.get(moveList.size() - 2); //start of last move
-            moveBlock(start, end, true); //so they don't get re-added
+            Tube start = moveList.remove(moveList.size() - 1); //get last item (which is the end of the last move
+            Tube end = moveList.remove(moveList.size() - 1); //start of last move
+            Block temp = start.removeTopBlock(); //moves block over
+            end.addBlock(temp);
+            while (!moveList.isEmpty() && moveList.getLast().equals(start) && moveList.get(moveList.size() - 2).equals(end)){
+                start = moveList.remove(moveList.size() - 1); //get last item (which is the end of the last move
+                end = moveList.remove(moveList.size() - 1); //start of last move
+                temp = start.removeTopBlock(); //moves block over
+                end.addBlock(temp);
+            }
             //score not decreased, user punished for undo
-            moveList.remove(moveList.size() - 1);
-            moveList.remove(moveList.size() - 2);
         } else {
             System.out.println("There is no more moves to undo");
         }
@@ -156,11 +186,11 @@ public class Level extends JComponent implements GameEventListener{
         if (!moveList.isEmpty()) {
             while (!moveList.isEmpty()){
                 undo();
-                currentScore -= 1;
             }
         } else {
             System.out.println("There is no more moves to restart");
         }
+        currentScore = 0;
     }
 
     public boolean isSolved(){
@@ -168,6 +198,9 @@ public class Level extends JComponent implements GameEventListener{
             if (!tubeList.get(i).isTubeSolved()){
                 return false;
             }
+        }
+        if (currentScore < bestScore || bestScore == 0){
+            bestScore = currentScore;
         }
         return true;
     }
@@ -189,4 +222,45 @@ public class Level extends JComponent implements GameEventListener{
         return firstLine + tubes + "\n\n";
     }
 
+    private void assignTubeShape(){
+        int numTubes = tubeList.size();
+        int space = 600 - (10 * (numTubes)); //600 is size of playing space, 10 is space between tubes
+        int sizeTube = space / numTubes;
+
+        int xStart = 100;
+        int yStart = 150;
+
+        for (int i = 0; i < tubeList.size(); i++){
+            Rectangle temp = tubeList.get(i).getShape();
+            temp.setBounds(xStart, yStart, sizeTube, 350);
+            xStart = xStart + sizeTube + 10;
+        }
+    }
+
+    public void mousePressed(MouseEvent e){
+        boolean contains = false;
+        for (int i = 0; i < tubeList.size(); i++){
+            Tube tempTube = tubeList.get(i);
+            Rectangle temp = tempTube.getShape();
+            if (temp.contains(e.getX(), e.getY())){
+                contains = true;
+                if (tempTube.isSelected()){
+                    tempTube.setSelect(false);
+                    return;
+                } else {
+                    for (int j = 0; j < tubeList.size(); j++){
+                        Tube startTube = tubeList.get(j);
+                        if (startTube.isSelected()){
+                            moveBlock(startTube, tempTube);
+                            startTube.setSelect(false);
+                            return;
+                        }
+                    }
+                    tempTube.setSelect(true);
+                }
+                break;
+            }
+        }
+
+    }
 }
